--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport-facebook": "latest",
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
-    "passport-twitter": "latest"
+    "passport-twitter": "latest",
+    "serve-favicon": "^2.2.0"
   },
   "devDependencies": {
     "connect-livereload": "~0.4.0",
