--- a/package.json
+++ b/package.json
@@ -3,20 +3,32 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "async": "^0.9.0",
+    "autoprefixer": "^5.1.0",
     "body-parser": "~1.5.0",
+    "cdnjs-cdn-data": "^0.1.1",
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "~1.0.1",
+    "debug": "^2.1.3",
     "ejs": "~0.8.4",
     "email-templates": "^1.1.1",
+    "engine.io": "^1.5.1",
     "errorhandler": "~1.0.0",
     "express": "~4.0.0",
     "express-jwt": "^0.1.3",
     "express-session": "~1.0.2",
+    "findup-sync": "^0.2.1",
+    "google-cdn-data": "^0.1.17",
+    "grunt-autoprefixer": "^2.2.0",
+    "grunt-karma": "^0.10.1",
+    "has-binary-data": "^0.1.5",
+    "hooker": "^0.2.3",
     "imagemin-jpegtran": "^4.1.0",
     "imagemin-optipng": "^4.2.0",
     "imagemin-pngquant": "^4.0.0",
+    "jshint": "^2.6.3",
     "jsonwebtoken": "^0.3.0",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
@@ -28,7 +40,13 @@
     "passport-google-oauth": "latest",
     "passport-local": "~0.1.6",
     "passport-twitter": "latest",
-    "serve-favicon": "^2.2.0"
+    "postcss": "^4.0.6",
+    "regexp-quote": "0.0.0",
+    "semver": "^4.3.1",
+    "serve-favicon": "^2.2.0",
+    "socket.io-adapter": "^0.3.1",
+    "socket.io-client": "^1.3.5",
+    "socket.io-parser": "^2.2.4"
   },
   "devDependencies": {
     "connect-livereload": "~0.4.0",
@@ -37,13 +55,14 @@
     "grunt-asset-injector": "^0.1.0",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-build-control": "DaftMonk/grunt-build-control",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-imagemin": "~0.7.1",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "^0.11.0",
     "grunt-contrib-uglify": "~0.4.0",
